--- a/.editorconfig
+++ b/.editorconfig
@@ -3,118 +3,205 @@
 # Core EditorConfig Options   # 
 ############################### 
 # All files 
-[*] 
-indent_style = tab 
+[*]
+indent_style=tab
+
+# Microsoft .NET properties
+csharp_new_line_before_members_in_object_initializers=false
+csharp_preferred_modifier_order=public, private, protected, internal, new, abstract, virtual, sealed, override, static, readonly, extern, unsafe, volatile, async:suggestion
+csharp_style_var_elsewhere=false:none
+csharp_style_var_for_built_in_types=false:suggestion
+dotnet_naming_rule.constants_rule.severity=warning
+dotnet_naming_rule.constants_rule.style=all_upper_style
+dotnet_naming_rule.constants_rule.symbols=constants_symbols
+dotnet_naming_rule.public_fields_rule.severity=warning
+dotnet_naming_rule.public_fields_rule.style=upper_camel_case_style
+dotnet_naming_rule.public_fields_rule.symbols=public_fields_symbols
+dotnet_naming_rule.static_readonly_rule.severity=warning
+dotnet_naming_rule.static_readonly_rule.style=upper_camel_case_style
+dotnet_naming_rule.static_readonly_rule.symbols=static_readonly_symbols
+dotnet_naming_style.all_upper_style.capitalization=all_upper
+dotnet_naming_style.all_upper_style.word_separator=_
+dotnet_naming_style.upper_camel_case_style.capitalization=pascal_case
+dotnet_naming_symbols.constants_symbols.applicable_accessibilities=public,internal,protected,protected_internal,private_protected
+dotnet_naming_symbols.constants_symbols.applicable_kinds=field
+dotnet_naming_symbols.constants_symbols.required_modifiers=const
+dotnet_naming_symbols.public_fields_symbols.applicable_accessibilities=public,internal,protected,protected_internal,private_protected
+dotnet_naming_symbols.public_fields_symbols.applicable_kinds=field
+dotnet_naming_symbols.static_readonly_symbols.applicable_accessibilities=public,internal,protected,protected_internal,private_protected
+dotnet_naming_symbols.static_readonly_symbols.applicable_kinds=field
+dotnet_naming_symbols.static_readonly_symbols.required_modifiers=static,readonly
+dotnet_style_parentheses_in_arithmetic_binary_operators=never_if_unnecessary:none
+dotnet_style_parentheses_in_other_binary_operators=never_if_unnecessary:none
+dotnet_style_parentheses_in_relational_binary_operators=never_if_unnecessary:none
+dotnet_style_predefined_type_for_locals_parameters_members=true:suggestion
+dotnet_style_predefined_type_for_member_access=true:suggestion
+dotnet_style_qualification_for_event=false:suggestion
+dotnet_style_qualification_for_field=false:suggestion
+dotnet_style_qualification_for_method=false:suggestion
+dotnet_style_qualification_for_property=false:suggestion
+dotnet_style_require_accessibility_modifiers=for_non_interface_members:suggestion
+
+# ReSharper properties
+resharper_autodetect_indent_settings=true
+resharper_blank_lines_after_block_statements=0
+resharper_csharp_alignment_tab_fill_style=use_tabs_only
+resharper_csharp_indent_style=tab
+resharper_csharp_naming_rule.constants=AA_BB, AaBb
+resharper_csharp_naming_rule.public_fields=AaBb, aaBb
+resharper_csharp_use_indent_from_vs=false
+resharper_csharp_wrap_lines=false
+resharper_css_indent_style=space
+resharper_for_built_in_types=use_var_when_evident
+resharper_html_indent_style=space
+resharper_js_indent_style=tab
+resharper_js_use_indent_from_vs=false
+resharper_place_simple_initializer_on_single_line=false
+resharper_protobuf_indent_style=space
+resharper_resx_indent_style=space
+resharper_space_around_multiplicative_op=false
+resharper_vb_indent_style=space
+resharper_xmldoc_indent_style=space
+resharper_xml_alignment_tab_fill_style=use_tabs_only
+resharper_xml_indent_style=tab
+resharper_xml_use_indent_from_vs=false
+
+# ReSharper inspection severities
+resharper_arrange_redundant_parentheses_highlighting=hint
+resharper_arrange_this_qualifier_highlighting=hint
+resharper_arrange_type_member_modifiers_highlighting=hint
+resharper_arrange_type_modifiers_highlighting=hint
+resharper_built_in_type_reference_style_for_member_access_highlighting=hint
+resharper_built_in_type_reference_style_highlighting=hint
+resharper_redundant_base_qualifier_highlighting=warning
+resharper_suggest_var_or_type_built_in_types_highlighting=hint
+resharper_suggest_var_or_type_elsewhere_highlighting=hint
+resharper_suggest_var_or_type_simple_types_highlighting=hint
 # Code files 
-[*.{cs,csx,vb,vbx}] 
-indent_style = tab 
-indent_size = 4 
-insert_final_newline = false 
-charset = utf-8-bom
+[*.{cs,csx,vb,vbx}]
+indent_style=tab
+indent_size=4
+insert_final_newline=false
+charset=utf-8-bom
 ############################### 
 # .NET Coding Conventions     # 
 ############################### 
-[*.{cs,vb}] 
+[*.{cs,vb}]
 # Organize usings 
-dotnet_sort_system_directives_first = true 
+dotnet_sort_system_directives_first=true
 # this. preferences 
-dotnet_style_qualification_for_field = false:silent 
-dotnet_style_qualification_for_property = false:silent 
-dotnet_style_qualification_for_method = false:silent 
-dotnet_style_qualification_for_event = false:silent 
+dotnet_style_qualification_for_field=false:silent
+dotnet_style_qualification_for_property=false:silent
+dotnet_style_qualification_for_method=false:silent
+dotnet_style_qualification_for_event=false:silent
 # Language keywords vs BCL types preferences 
-dotnet_style_predefined_type_for_locals_parameters_members = true:silent 
-dotnet_style_predefined_type_for_member_access = true:silent 
+dotnet_style_predefined_type_for_locals_parameters_members=true:silent
+dotnet_style_predefined_type_for_member_access=true:silent
 # Parentheses preferences 
-dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent 
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent 
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent 
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent 
+dotnet_style_parentheses_in_arithmetic_binary_operators=always_for_clarity:silent
+dotnet_style_parentheses_in_relational_binary_operators=always_for_clarity:silent
+dotnet_style_parentheses_in_other_binary_operators=always_for_clarity:silent
+dotnet_style_parentheses_in_other_operators=never_if_unnecessary:silent
 # Modifier preferences 
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent 
-dotnet_style_readonly_field = true:suggestion 
+dotnet_style_require_accessibility_modifiers=for_non_interface_members:silent
+dotnet_style_readonly_field=true:suggestion
 # Expression-level preferences 
-dotnet_style_object_initializer = true:suggestion 
-dotnet_style_collection_initializer = true:suggestion 
-dotnet_style_explicit_tuple_names = true:suggestion 
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_null_propagation = true:suggestion 
-dotnet_style_coalesce_expression = true:suggestion 
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true:silent
-dotnet_prefer_inferred_tuple_names = true:suggestion 
-dotnet_prefer_inferred_anonymous_type_member_names = true:suggestion 
-dotnet_style_prefer_auto_properties = true:silent 
-dotnet_style_prefer_conditional_expression_over_assignment = true:silent 
-dotnet_style_prefer_conditional_expression_over_return = true:silent 
+dotnet_style_object_initializer=true:suggestion
+dotnet_style_collection_initializer=true:suggestion
+dotnet_style_explicit_tuple_names=true:suggestion
+dotnet_style_prefer_inferred_tuple_names=true:suggestion
+dotnet_style_prefer_inferred_anonymous_type_member_names=true:suggestion
+dotnet_style_null_propagation=true:suggestion
+dotnet_style_coalesce_expression=true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method=true:silent
+dotnet_prefer_inferred_tuple_names=true:suggestion
+dotnet_prefer_inferred_anonymous_type_member_names=true:suggestion
+dotnet_style_prefer_auto_properties=true:silent
+dotnet_style_prefer_conditional_expression_over_assignment=true:silent
+dotnet_style_prefer_conditional_expression_over_return=true:silent
 ############################### 
 # Naming Conventions          # 
 ############################### 
 # Style Definitions 
-dotnet_naming_style.pascal_case_style.capitalization             = pascal_case 
+dotnet_naming_style.pascal_case_style.capitalization=pascal_case
 # Use PascalCase for constant fields   
-dotnet_naming_rule.constant_fields_should_be_pascal_case.severity = suggestion 
-dotnet_naming_rule.constant_fields_should_be_pascal_case.symbols  = constant_fields 
-dotnet_naming_rule.constant_fields_should_be_pascal_case.style    = pascal_case_style 
-dotnet_naming_symbols.constant_fields.applicable_kinds            = field 
-dotnet_naming_symbols.constant_fields.applicable_accessibilities  = * 
-dotnet_naming_symbols.constant_fields.required_modifiers          = const 
+dotnet_naming_rule.constant_fields_should_be_pascal_case.severity=suggestion
+dotnet_naming_rule.constant_fields_should_be_pascal_case.symbols=constant_fields
+dotnet_naming_rule.constant_fields_should_be_pascal_case.style=pascal_case_style
+dotnet_naming_symbols.constant_fields.applicable_kinds=field
+dotnet_naming_symbols.constant_fields.applicable_accessibilities=*
+dotnet_naming_symbols.constant_fields.required_modifiers=const
 ############################### 
 # C# Coding Conventions       # 
 ############################### 
-[*.cs] 
+[*.cs]
 # var preferences 
-csharp_style_var_for_built_in_types = false:suggestion 
-csharp_style_var_when_type_is_apparent = true:suggestion 
-csharp_style_var_elsewhere = false:suggestion
+csharp_style_var_for_built_in_types=false:suggestion
+csharp_style_var_when_type_is_apparent=true:suggestion
+csharp_style_var_elsewhere=false:suggestion
 # Expression-bodied members 
-csharp_style_expression_bodied_methods = false:silent 
-csharp_style_expression_bodied_constructors = false:silent 
-csharp_style_expression_bodied_operators = false:silent 
-csharp_style_expression_bodied_properties = true:silent 
-csharp_style_expression_bodied_indexers = true:silent 
-csharp_style_expression_bodied_accessors = true:silent 
+csharp_style_expression_bodied_methods=false:silent
+csharp_style_expression_bodied_constructors=false:silent
+csharp_style_expression_bodied_operators=false:silent
+csharp_style_expression_bodied_properties=true:silent
+csharp_style_expression_bodied_indexers=true:silent
+csharp_style_expression_bodied_accessors=true:silent
 # Pattern matching preferences 
-csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion 
-csharp_style_pattern_matching_over_as_with_null_check = true:suggestion 
+csharp_style_pattern_matching_over_is_with_cast_check=true:suggestion
+csharp_style_pattern_matching_over_as_with_null_check=true:suggestion
 # Null-checking preferences 
-csharp_style_throw_expression = true:suggestion 
-csharp_style_conditional_delegate_call = true:suggestion 
+csharp_style_throw_expression=true:suggestion
+csharp_style_conditional_delegate_call=true:suggestion
 # Modifier preferences 
-csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion 
+csharp_preferred_modifier_order=public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
 # Expression-level preferences 
-csharp_prefer_braces = false:suggestion 
-csharp_style_deconstructed_variable_declaration = true:suggestion 
-csharp_prefer_simple_default_expression = true:suggestion 
-csharp_style_pattern_local_over_anonymous_function = true:silent 
-csharp_style_inlined_variable_declaration = true:suggestion 
+csharp_prefer_braces=false:suggestion
+csharp_style_deconstructed_variable_declaration=true:suggestion
+csharp_prefer_simple_default_expression=true:suggestion
+csharp_style_pattern_local_over_anonymous_function=true:silent
+csharp_style_inlined_variable_declaration=true:suggestion
 ############################### 
 # C# Formatting Rules         # 
 ############################### 
 # New line preferences 
-csharp_new_line_before_open_brace = all 
-csharp_new_line_before_else = true 
-csharp_new_line_before_catch = true 
-csharp_new_line_before_finally = true 
-csharp_new_line_before_members_in_object_initializers = true 
-csharp_new_line_before_members_in_anonymous_types = true 
-csharp_new_line_between_query_expression_clauses = true 
+csharp_new_line_before_open_brace=all
+csharp_new_line_before_else=true
+csharp_new_line_before_catch=true
+csharp_new_line_before_finally=true
+csharp_new_line_before_members_in_object_initializers=true
+csharp_new_line_before_members_in_anonymous_types=true
+csharp_new_line_between_query_expression_clauses=true
 # Indentation preferences 
-csharp_indent_case_contents = true 
-csharp_indent_switch_labels = true 
-csharp_indent_labels = no_change 
+csharp_indent_case_contents=true
+csharp_indent_switch_labels=true
+csharp_indent_labels=no_change
 # Space preferences 
-csharp_space_after_cast = true 
-csharp_space_after_keywords_in_control_flow_statements = true 
-csharp_space_between_method_call_parameter_list_parentheses = false 
-csharp_space_between_method_declaration_parameter_list_parentheses = false 
-csharp_space_between_parentheses = false 
-csharp_space_before_colon_in_inheritance_clause = true 
-csharp_space_after_colon_in_inheritance_clause = true 
-csharp_space_around_binary_operators = before_and_after 
-csharp_space_between_method_declaration_empty_parameter_list_parentheses = false 
-csharp_space_between_method_call_name_and_opening_parenthesis = false 
-csharp_space_between_method_call_empty_parameter_list_parentheses = false 
+csharp_space_after_cast=true
+csharp_space_after_keywords_in_control_flow_statements=true
+csharp_space_between_method_call_parameter_list_parentheses=false
+csharp_space_between_method_declaration_parameter_list_parentheses=false
+csharp_space_between_parentheses=false
+csharp_space_before_colon_in_inheritance_clause=true
+csharp_space_after_colon_in_inheritance_clause=true
+csharp_space_around_binary_operators=before_and_after
+csharp_space_between_method_declaration_empty_parameter_list_parentheses=false
+csharp_space_between_method_call_name_and_opening_parenthesis=false
+csharp_space_between_method_call_empty_parameter_list_parentheses=false
 # Wrapping preferences 
-csharp_preserve_single_line_statements = false 
-csharp_preserve_single_line_blocks = true 
+csharp_preserve_single_line_statements=false
+csharp_preserve_single_line_blocks=true
+
+[*.{appxmanifest,axml,build,config,cs,csproj,dbml,discomap,dtd,js,json,jsproj,jsx,lsproj,njsproj,nuspec,proj,props,proto,resjson,StyleCop,targets,tasks,ts,tsx,vbproj,xaml,xamlx,xml,xoml,xsd}]
+indent_style=tab
+indent_size=tab
+tab_width=4
+
+[*.{asax,ascx,aspx,cshtml,css,htm,html,master,razor,skin,vb}]
+indent_style=space
+indent_size=4
+tab_width=4
+
+[*.{resw,resx}]
+indent_style=space
+indent_size=2
+tab_width=2
