--- a/src/MiNET/MiNET.Client/MiNET.Client.csproj
+++ b/src/MiNET/MiNET.Client/MiNET.Client.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <Content Include="log4net.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
