--- a/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
+++ b/src/MiNET/MiNET.ServiceKiller/MiNET.ServiceKiller.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <Content Include="log4net.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="server.conf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
